minor css fix, select league visible in searchBar

--- a/client/src/components/search/search.css
+++ b/client/src/components/search/search.css
@@ -38,11 +38,9 @@
   background: none;
   outline:none;
   float:left;
-  padding: 0;
   font-size: 16px;
   transition: 0.4s;
   line-height: 40px;
-  width: 0px;
 
   width: 240px;
   padding: 0 6px;
@@ -69,12 +67,9 @@
   font-size: 16px;
   transition: 0.4s;
   line-height: 40px;
-  width:0;
-  opacity: 0;
   height: fit-content;
 
   width: auto;
-  opacity: 100%;
 }
 .searchIcon{
   height: 30px;
